horizontal scroll issues fixed now need to test

--- a/portfolio/src/css/App.css
+++ b/portfolio/src/css/App.css
@@ -141,12 +141,16 @@ html {
   text-align: center;
   position: relative;
   width: 100%;
-  height: 60vh;
+  /* height: 60vh; */
 }
 
 .portfolio-container {
   max-width: 1024px;
   margin: 0 auto;
+}
+
+.header-view {
+  width: 100%;
 }
 
 .headShot {
@@ -166,7 +170,7 @@ html {
   /* display: flex; */
   position: fixed;
   z-index: 20;
-  
+  width: 100%;
  
 }
 
@@ -317,6 +321,7 @@ html {
 
 .footer {
   /* border: 1px solid red; */
+  width: 100%;
   margin: 20px 0 0 0;
   background-color: #1a202b;
   padding: 20px 0;
@@ -364,6 +369,22 @@ html {
 }
 
 @media (max-width: 768px) {
+
+  .root {
+  }
+  
+   .App {
+    width: 100%;
+    min-width: 480px;
+    margin: 0 auto;
+    /* display: flex; */
+    /* width: 100%; */
+  }
+  
+  /* .App-Container {
+    width: 100vw;
+    
+  } */
 
   .header-height {
     height: 100vh;
@@ -414,6 +435,7 @@ html {
   .footer {
     /* border: 1px solid red; */
     flex-direction: column;
+    width: 100%;
   }
 
   .footer-quote h1 {
